syntax = "proto3";

package exampleGrpc;

// go options
option go_package = "exampleGrpc";

// java options
option java_package = "com.example.grpc";
option java_multiple_files = true;

service PeopleService {
    rpc SearchByName(SearchRequest) returns (SearchResponse) {}
}

message SearchRequest {
    string query = 1;
}

message SearchResponse {
    repeated Person people = 1;
}

message Person {
    enum Country {
        AMERICA = 0;
        JAPAN = 1;
        CANADA = 2;
    }

    string name = 1;
    int32 age = 2;
    Country country = 3;
    string hobby = 4;
}

